fix overflowing text editor

--- a/styles/quill.scss
+++ b/styles/quill.scss
@@ -45,6 +45,7 @@
   &.ql-container {
     border-top-left-radius: 0 !important;
     border-top-right-radius: 0 !important;
+    overflow: hidden;
   }
 }
 
